Add basic HTML structure for user list app

--- a/web-users-app/index.html
+++ b/web-users-app/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lista de Usuários</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <h1>Carregar Usuários</h1>
 
+    <button id="btnCarregar">Carregar Usuários</button>
+
+    <p id="erro" class="erro"></p>
+
+    <ul id="listaUsuarios"></ul>
+
+    <script src="script.js"></script>
+</body>
+</html>
